adopted the idea of tim. Now uses custom elements. Added navigation bar

--- a/committee.html
+++ b/committee.html
@@ -14,11 +14,10 @@
     <!--    <link rel="import" href="wisvch-committee.html">-->
     <link rel="import" href="resources/wisvch-committee.html">
     <link rel="import" href="resources/wisvch-navigation.html">
-
 </head>
 
 <body>
-    <h1 style="text-align: center">Home!</h1>
+    <h1 style="text-align: center">Committee!</h1>
   
     <div>
         <wisvch-navigation src="resources/pages.json"></wisvch-navigation>
@@ -34,6 +33,7 @@
         position: absolute;
         bottom: 5vh;
     }
+
 </style>
 
 </html>
