--- a/program.html
+++ b/program.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1 style="text-align: center">Home!</h1>
+    <h1 style="text-align: center">Program!</h1>
   
     <div>
         <wisvch-navigation src="resources/pages.json"></wisvch-navigation>
@@ -34,6 +34,7 @@
         position: absolute;
         bottom: 5vh;
     }
+
 </style>
 
 </html>
