--- a/committee.html
+++ b/committee.html
@@ -12,8 +12,8 @@
 
     <!--    <link rel="import" href="header.html">-->
     <!--    <link rel="import" href="wisvch-committee.html">-->
-    <link rel="import" href="resources/wisvch-committee.html">
-    <link rel="import" href="resources/wisvch-navigation.html">
+    <script type="module" src="./resources/wisvch-committee.js"></script>
+    <script type="module" src="./resources/wisvch-navigation.js"></script>
 </head>
 
 <body>
