--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">-->
 
     <!--    <link rel="import" href="header.html">-->
-    <link rel="import" href="resources/wisvch-committee.html">
-    <link rel="import" href="resources/wisvch-navigation.html">
+    <script type="module" src="./resources/wisvch-committee.js"></script>
+    <script type="module" src="./resources/wisvch-navigation.js"></script>
 
 </head>
 
